<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ededed"
        android:padding="22dp"
        tools:context="io.github.introml.activityrecognition.MainActivity">

        <TableRow
            android:id="@+id/title_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/title"
                android:layout_weight="1"
                android:text="@string/activity"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView"
                android:layout_weight="1"
                android:text="@string/probability"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:id="@+id/walking_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/walking_title"
                android:layout_weight="1"
                android:text="@string/walking"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/walking_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/walkingupstairs_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/walkingupstairs_title"
                android:layout_weight="1"
                android:text="@string/walkingupstairs"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/walkingupstairs_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/walkingdownstairs_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/walkingdownstairs_title"
                android:layout_weight="1"
                android:text="@string/walkingdownstairs"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/walkingdownstairs_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sitting_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/sitting_title"
                android:layout_weight="1"
                android:text="@string/sitting"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sitting_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/standing_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/standing_title"
                android:layout_weight="1"
                android:text="@string/standing"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/standing_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/laying_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/laying_title"
                android:layout_weight="1"
                android:text="@string/laying"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/laying_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/standtosit_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/standtosit_title"
                android:layout_weight="1"
                android:text="@string/standtosit"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/standtosit_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sittostand_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/sittostand_title"
                android:layout_weight="1"
                android:text="@string/sittostand"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sittostand_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sittolie_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/sittolie_title"
                android:layout_weight="1"
                android:text="@string/sittolie"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sittolie_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/lietosit_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/lietosit_title"
                android:layout_weight="1"
                android:text="@string/lietosit"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lietosit_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/standtolie_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/standtolie_title"
                android:layout_weight="1"
                android:text="@string/standtolie"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/standtolie_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/lietostand_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="22dp">

            <TextView
                android:id="@+id/lietostand_title"
                android:layout_weight="1"
                android:text="@string/lietostand"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lietostand_prob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>
</ScrollView>